# advent2019

./: COPYING  README.rst
cxx/: .clang-format  1a.cpp  1b.cpp  2a.cpp  2b.cpp  3a.cpp  3b.cpp  4a.cpp  5a.cpp  6a.cpp  6b.cpp  7a.cpp  7b.cpp  CMakeLists.txt  machine.cpp  orbit.cpp  password.cpp  point.cpp  segment.cpp  wire.cpp
cxx/include/aoc/: machine.hpp  orbit.hpp  password.hpp  point.hpp  segment.hpp  wire.hpp
cxx/test/: CMakeLists.txt  machine_test.cpp  orbit_test.cpp  password_test.cpp  point_test.cpp  segment_test.cpp  wire_test.cpp
input/: 4a  5a  5b
